// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HintText /> should match snapshot for active hint 1`] = `
<p
  class="root sizeScale1 hintText hintTextActive"
>
  Hello World!
</p>
`;

exports[`<HintText /> should match snapshot for default hint 1`] = `
<p
  class="root sizeScale1 hintText"
>
  Hello World!
</p>
`;
